--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .App {
   /*text-align: center;*/
-  min-width: 320px;
-  border: 1px solid blue;
+  min-width: 300px;
+  /*border: 1px solid blue;*/
   /*max-width:400px;*/
   margin: auto;
 }
 
 @media (max-width: 600px) {
   .App {
-    padding: 10px;
+    padding: 5px;
   }
 }
 @media (min-width: 600px) {
@@ -20,7 +20,6 @@
 .todo-list-container {
   display: flex;
   flex-direction: column;
-  border: 3px solid orange;
   margin: auto;
 }
 
@@ -31,45 +30,137 @@
 }
 .input-and-submit {
   flex-direction: row;
-  border: 1px solid blue;
+  /*border: 1px solid blue;*/
+  align-items: center;
+  justify-content: center;
   flex: 1;
   display: flex;
 }
 
 .text-field {
   flex: 1;
+  width: 100%;
   display: flex;
-  height: 30px;
-  font-size: 24px;
-  border-radius: 4px;
+  /*height: 19px;*/
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 10px;
   position: relative;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.text-field-edit {
+  display: flex;
+  flex: 1;
+  /*height: 19px;*/
+  padding: 6px;
+  font-size: 16px;
+  border-radius: 10px;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.text-field:focus {
+  outline: none !important;
+  /*border:1px solid red;*/
+  /*box-shadow: 0 0 10px #719ECE;*/
+}
+.todo-completed {
+  text-decoration: line-through;
+}
+
+.todo-deleted {
+  color: #fc0107;
+}
+.heading-text {
+  font-size: 32px;
+  color: rgba(63, 164, 62, 0.8);
+  font-weight: 800;
+  /*border:1px solid red;*/
+  /*box-shadow: 0 0 10px #719ECE;*/
 }
 
 .todo-list-item {
   flex-direction: row;
+  min-height: 60px;
   display: flex;
   flex: 1;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(63, 164, 62, 0.3);
+  margin-top: 8px;
+  border-radius: 10px;
   width: 100%;
   align-items: center;
-  border: 1px solid blue;
+  /*border: 1px solid blue;*/
   justify-content: space-between;
 }
-.todo-text{
-  display:flex;
-  flex:1;
+.todo-text {
+  display: flex;
+  flex: 1;
 }
 .btn-icon {
-  background-color: transparent; 
-  border: none; 
-  padding: 6px 10px; 
+  background-color: transparent;
+  border: none;
+  padding: 6px 10px;
   border-radius: 4px;
-  font-size: 16px; 
+  font-size: 16px;
   cursor: pointer;
 }
+.btn {
+  display: inline-block;
+  font-size: 18px;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4caf50;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 9px #999;
+}
 
+@media (max-width: 400px) {
+  .btn {
+    padding: 10px 10px;
+  }
+}
+.nothing-text {
+  font-size: 20px;
+  color: rgba(63, 164, 62, 0.35);
+  font-weight: 800;
+  margin-top: 30px;
+}
+.btn-submit:hover {
+  background-color: #3e8e41;
+}
+
+.btn-submit:active {
+  background-color: #3e8e41;
+  box-shadow: 0 2px #666;
+  transform: translateY(2px);
+}
+.btn-submit {
+  padding: 10px 20px;
+  margin-bottom: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4caf50;
+  box-shadow: 0 3px #999;
+  border: none;
+  border-radius: 10px;
+}
+
+.selected {
+  background-color: #3e8e41;
+  box-shadow: 0 3px #666;
+  transform: translateY(4px);
+}
 .btn-icon-check {
-  color: #074080; 
+  color: #4caf50;
 }
 .btn-icon-delete {
   color: black;
@@ -81,5 +172,10 @@
 }
 
 .filter-buttons-container {
-  flex-direction: row;
+  margin-top: 20px;
+  margin-bottom: 24px;
+  display: flex;
+  flex: 1;
+  /*flex-direction: row;*/
+  align-self: flex-start;
 }
